# mini-infer

./: .gitignore  CLAUDE.md  README.md  main.py  main_chat.py  main_qwen35.py  main_qwen35_image.py  pyproject.toml  tokenizer_wrapper.py
models/: qwen35dense.py  qwen3dense.py  utils.py
