[project]
name = "mini-infer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.10.0",
    "tokenizers>=0.21.0",
    "jinja2>=3.1.0",
    "safetensors>=0.4.0",
    "numpy>=1.26.0",
    "pydantic>=2.12.5",
    "pillow>=12.1.1",
]
